<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/infoPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoPrompt"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profilePicRegister"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="24dp"
        android:importantForAccessibility="no"
        android:onClick="uploadPic"
        android:src="@drawable/default_profile_pic"
        app:tint="@color/AppSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoPrompt" />

    <EditText
        android:id="@+id/displayNameRegister"
        style="@style/RoundEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/displayName"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/profilePicRegister" />

    <EditText
        android:id="@+id/userNameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        style="@style/RoundEditText"
        android:layout_marginTop="24dp"
        android:hint="@string/username"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@+id/displayNameRegister"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/passwordRegister"
        style="@style/RoundEditText"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/userNameRegister" />

    <EditText
        android:id="@+id/verifyPasswordRegister"
        style="@style/RoundEditText"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/verifyPassword"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegister" />

    <Button
        style="@style/RoundButton"
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/textSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="24dp"
        android:onClick="register"/>

    <TextView
        android:id="@+id/invalidInput"
        style="@style/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:gravity="center_horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyPasswordRegister" />


</androidx.constraintlayout.widget.ConstraintLayout>